--- a/kakaoClone-main/build.gradle
+++ b/kakaoClone-main/build.gradle
@@ -25,6 +25,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	//jwt
 	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+	//fileUpload
+	implementation 'commons-fileupload:commons-fileupload:1.3.3'
 
 
 
