--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -7,4 +7,8 @@ spring:
 server:
   port: 9000
 
-#include
+project:
+  properties:
+    username: chat
+    password: chat1234
+    swagger-host: localhost:9000
