--- a/api/src/main/resources/application-dev.yaml
+++ b/api/src/main/resources/application-dev.yaml
@@ -3,7 +3,9 @@ spring:
     url: jdbc:h2:mem:test
   h2:
     console:
-      settings: web-allow-others=true
+#      settings: web-allow-others=true
+      enabled: true
+    path: /h2-console
   jpa:
     hibernate:
       ddl-auto: create-drop
