--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,7 @@ configurations {
 repositories {
 	mavenCentral()
 }
-bootJar {
-	baseName "api"
-}
+
 allprojects {
 	apply plugin: 'org.springframework.boot'
 	apply plugin: 'io.spring.dependency-management'
@@ -41,7 +39,7 @@ subprojects { it ->
 		//jwt
 		compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 
-
+		compile('org.modelmapper:modelmapper:1.1.0')
 		compileOnly 'org.projectlombok:lombok'
 		developmentOnly 'org.springframework.boot:spring-boot-devtools'
 		runtimeOnly 'com.h2database:h2'
