--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,8 +1,29 @@
+//apply plugin: 'org.asciidoctor.convert'
+//processResources {
+//    dependsOn "buildRestDoc"
+//}
 bootJar {
+    dependsOn asciidoctor
+    from ("${project.projectDir}/src/main/resources/templates/docs") {
+        into 'BOOT-INF/classes/templates/docs'
+    }
+//    from ("${asciidoctor.outputDir}/html5") {
+//        into 'static/docs'
+//    }
     baseName "api"
+
 }
+//bootJar.doFirst {
+//    dependsOn asciidoctor
+//}
+ext {
+    set('snippetsDir', file("build/generated-snippets"))
+}
+//ext['spring-restdocs.version'] = '2.0.6.BUILD-SNAPSHOT'
 
 dependencies {
+
+
     testImplementation 'org.springframework.security:spring-security-test'
     compile('org.springframework.boot:spring-boot-starter-security')
 
@@ -11,3 +32,27 @@ dependencies {
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
 
 }
+test {
+    outputs.dir snippetsDir
+    useJUnitPlatform()
+}
+
+asciidoctor {
+    dependsOn test
+    inputs.dir snippetsDir
+    separateOutputDirs = false
+//    outputs.dir = "${project.projectDir}/resources/templates"
+//    outputDir = file("$buildDir/site")
+    outputDir = file("${project.projectDir}/src/main/resources/templates/docs")
+//    println("--> ${outputDir}")
+//    print('-asciidoctor after-')
+}
+//asciidoctor.doLast {
+//    println("do lastttt")
+//    copy {
+//        from 'build/docs/html5'
+//        into "${project.projectDir}/src/main/resources/templates/docs"
+//        include 'index.html'
+//    }
+//}
+
