--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,15 @@
+buildscript {
+	repositories {
+		mavenCentral()
+	}
+	dependencies {
+		classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.1.9.RELEASE'
+	}
+}
 plugins {
 	id 'org.springframework.boot' version '2.3.5.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
+	id "org.asciidoctor.convert" version "1.5.9.2"
 	id 'java'
 }
 
@@ -21,6 +30,7 @@ repositories {
 allprojects {
 	apply plugin: 'org.springframework.boot'
 	apply plugin: 'io.spring.dependency-management'
+	apply plugin: 'org.asciidoctor.convert'
 	apply plugin: 'java'
 	apply plugin: 'idea'
 
@@ -32,23 +42,30 @@ allprojects {
 }
 subprojects { it ->
 	dependencies {
+		asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor'
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 		implementation 'org.springframework.boot:spring-boot-starter-web'
+		compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+//		compile group: 'org.thymeleaf', name: 'thymeleaf-spring5', version: '3.0.9.RELEASE'
+//		compile group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-springsecurity4', version: '3.0.2.RELEASE'
 		//웹소켓 관련 dependency
 		implementation 'org.springframework.boot:spring-boot-starter-websocket'
 		//jwt
 		compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 
 		compile('org.modelmapper:modelmapper:1.1.0')
-		compileOnly 'org.projectlombok:lombok'
 		developmentOnly 'org.springframework.boot:spring-boot-devtools'
 		runtimeOnly 'com.h2database:h2'
 		runtimeOnly 'org.mariadb.jdbc:mariadb-java-client' // MariaDB
 		annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+		compile 'org.projectlombok:lombok'
+		testCompileOnly 'org.projectlombok:lombok'
 		annotationProcessor 'org.projectlombok:lombok'
+		testAnnotationProcessor 'org.projectlombok:lombok'
 		testImplementation('org.springframework.boot:spring-boot-starter-test') {
 			exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 		}
+		testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 	}
 }
 test {
