--- a/api/build.gradle
+++ b/api/build.gradle
@@ -23,7 +23,8 @@ ext {
 
 dependencies {
 
-
+    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6' // 쿼리 안의 파라미터를 확인하게 도와주는 외부 라이브러리
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     testImplementation 'org.springframework.security:spring-security-test'
     compile('org.springframework.boot:spring-boot-starter-security')
 
