--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
 plugins {
 	id 'org.springframework.boot' version '2.3.5.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-	id "org.asciidoctor.convert" version "1.5.9.2"
+	id "org.asciidoctor.convert" version "2.4.0"
 	id 'java'
 }
 
@@ -48,8 +48,16 @@ subprojects { it ->
 		compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 //		compile group: 'org.thymeleaf', name: 'thymeleaf-spring5', version: '3.0.9.RELEASE'
 //		compile group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-springsecurity4', version: '3.0.2.RELEASE'
+
+		// https://mvnrepository.com/artifact/org.webjars/jquery
+		compile group: 'org.webjars', name: 'jquery', version: '3.5.1'
+
+
 		//웹소켓 관련 dependency
 		implementation 'org.springframework.boot:spring-boot-starter-websocket'
+//		compile 'org.webjars:sockjs-client:1.1.0'
+		compile group: 'org.webjars', name: 'sockjs-client', version: '1.1.1'
+		compile 'org.webjars:stomp-websocket:2.3.3'
 		//jwt
 		compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 
@@ -59,8 +67,8 @@ subprojects { it ->
 		runtimeOnly 'org.mariadb.jdbc:mariadb-java-client' // MariaDB
 		annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 		compile 'org.projectlombok:lombok'
-		testCompileOnly 'org.projectlombok:lombok'
 		annotationProcessor 'org.projectlombok:lombok'
+		testCompileOnly 'org.projectlombok:lombok'
 		testAnnotationProcessor 'org.projectlombok:lombok'
 		testImplementation('org.springframework.boot:spring-boot-starter-test') {
 			exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
