--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,11 @@ subprojects { it ->
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 		implementation 'org.springframework.boot:spring-boot-starter-web'
 		compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+		implementation 'org.springframework.boot:spring-boot-starter-validation'
+		compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
+		compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
+		compile group: 'org.apache.commons', name: 'commons-text', version: '1.9'
+
 //		compile group: 'org.thymeleaf', name: 'thymeleaf-spring5', version: '3.0.9.RELEASE'
 //		compile group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-springsecurity4', version: '3.0.2.RELEASE'
 
