AWS 파일업로드 경로 S3로 변경
- 회원가입 시 프로필 파일 s3 저장소로 저장되게 구현

--- a/api/src/main/resources/application-dev.yaml
+++ b/api/src/main/resources/application-dev.yaml
@@ -19,3 +19,15 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
 logging:
   config: classpath:logback-dev.xml
+
+cloud:
+  aws:
+    credentials:
+      accessKey: AKIAU2UABLWF2JG2HL65
+      secretKey: 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
+    s3:
+      bucket: serobucket
+    region:
+      static: ap-northeast-2
+    stack:
+      auto: false
