--- a/api/src/main/resources/application-dev.yaml
+++ b/api/src/main/resources/application-dev.yaml
@@ -11,7 +11,7 @@ spring:
     path: /h2-console
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: create
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
