--- a/api/src/main/resources/application-dev.yaml
+++ b/api/src/main/resources/application-dev.yaml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: api
   datasource:
 #    url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
     url: jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE
