--- a/front-angular/package.json
+++ b/front-angular/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~9.1.4",
     "@angular/platform-browser-dynamic": "~9.1.4",
     "@angular/router": "~9.1.4",
+    "@stomp/ng2-stompjs": "^8.0.0",
     "@types/jquery": "^3.5.1",
     "angular-feather": "^6.0.10",
     "angular-in-memory-web-api": "~0.11.0",
@@ -50,6 +51,7 @@
     "quill": "^1.3.7",
     "rxjs": "~6.5.4",
     "script-loader": "^0.7.2",
+    "sockjs-client": "^1.5.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.3"
   },
