--- a/api/src/test/resources/application-dev.yaml
+++ b/api/src/test/resources/application-dev.yaml
@@ -1,7 +1,7 @@
 spring:
   datasource:
-#    url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
-    url: jdbc:h2:tcp://localhost/~/test
+    url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+#    url: jdbc:h2:tcp://localhost/~/test
 #    url: jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE
 #    url: jdbc:h2:~/test
     driver-class-name: org.h2.Driver
@@ -20,3 +20,15 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
 logging:
   config: classpath:logback-dev.xml
+
+cloud:
+  aws:
+    credentials:
+      accessKey: AKIAU2UABLWF2JG2HL65
+      secretKey: 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
+    s3:
+      bucket: serobucket
+    region:
+      static: ap-northeast-2
+    stack:
+      auto: false
