--- a/api/src/main/resources/application-dev.yaml
+++ b/api/src/main/resources/application-dev.yaml
@@ -4,6 +4,7 @@ spring:
   datasource:
 #    url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
     url: jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE
+#    url: jdbc:h2:mem:test;COMPRESS=TRUE;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;
 #    url: jdbc:h2:~/test
     driver-class-name: org.h2.Driver
   h2:
