--- a/api/build.gradle
+++ b/api/build.gradle
@@ -4,16 +4,25 @@ apply plugin: 'cz.habarta.typescript-generator'
 //    dependsOn "buildRestDoc"
 //}
 bootJar {
+    dependsOn "buildAngular"
     dependsOn asciidoctor
     from ("${project.projectDir}/src/main/resources/templates/docs") {
         into 'BOOT-INF/classes/templates/docs'
     }
-//    from ("${asciidoctor.outputDir}/html5") {
-//        into 'static/docs'
-//    }
+    from ("${project.projectDir}/src/main/resources/webapp") {
+        into 'BOOT-INF/classes/webapp'
+    }
+    from (file("${project.projectDir}/src/main/resources/templates/index.html")) {
+        into 'BOOT-INF/classes/templates'
+    }
     baseName "api"
 
 }
+
+def webappDir = "$projectDir/src/main/resources/webapp"
+def templatesDir = "$projectDir/src/main/resources/templates"
+def angularDir = project(':front-angular').projectDir
+
 //bootJar.doFirst {
 //    dependsOn asciidoctor
 //}
@@ -56,7 +65,6 @@ asciidoctor {
 //}
 
 
-def angularDir = project(':front-angular').projectDir
 generateTypeScript {
 //    customTypeNaming = [
 //            'org.springframework.security.core.userdetails.UserDetails:UserDetailsOfSpring',
@@ -77,4 +85,48 @@ generateTypeScript {
     outputFile = "${angularDir}/generate/models.ts"
     scanSpringApplication = true
     generateSpringApplicationClient = true
+}
+
+
+
+
+
+task installAngular(type: Exec) {
+    dependsOn generateTypeScript
+    doFirst {
+        def targetNodePath = "";
+        if (project.hasProperty('nodePath')) {
+            targetNodePath = "$nodePath/";
+        }
+//        tasks.generateTypeScript.execute()
+        workingDir "$angularDir"
+//        inputs.dir "$angularDir"
+//        group = BasePlugin.BUILD_GROUP
+        if (System.getProperty("os.name").toUpperCase().contains("WINDOWS")) {
+            commandLine "${targetNodePath}npm.cmd", "install"
+        } else {
+            commandLine "${targetNodePath}npm", "install"
+        }
+    }
+}
+task buildWebAppAngular(type:Exec) {
+    dependsOn 'installAngular'
+    doFirst {
+        def targetNodePath = "";
+        if (project.hasProperty('nodePath')) {
+            targetNodePath = "$nodePath/";
+        }
+        workingDir "$angularDir"
+//        inputs.dir "$angularDir"
+//        group = BasePlugin.BUILD_GROUP
+        commandLine "${targetNodePath}node", "node_modules/@angular/cli/bin/ng", "build", "--prod"
+    }
+}
+task buildAngular(type: Copy, dependsOn: 'buildWebAppAngular') {
+//task buildAngular(type: Copy) {
+//    doFirst {
+    from "${webappDir}/index.html"
+    into "${templatesDir}"
+    print("buildAngular END : ${webappDir} ${templatesDir}")
+//    }
 }
