--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -20,6 +20,5 @@ project:
     tokenPrefix: "Bearer "
     tokenExpirationAfterDays: 10
   properties:
-    username: chat
-    password: chat1234
+    angular-path: classpath:/webapp
     swagger-host: localhost:9000
