--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,8 @@ subprojects { it ->
 		compile 'org.webjars:stomp-websocket:2.3.3'
 		//jwt
 		compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+		compile("org.hibernate:hibernate-java8")
+		compile "com.fasterxml.jackson.datatype:jackson-datatype-hibernate5:2.8.+"
 
 		compile('org.modelmapper:modelmapper:1.1.0')
 		developmentOnly 'org.springframework.boot:spring-boot-devtools'
