--- a/api/src/main/resources/application-dev.yaml
+++ b/api/src/main/resources/application-dev.yaml
@@ -15,6 +15,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create-drop
+      use-new-id-generator-mappings: false
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
