--- a/core/src/main/resources/application-db.yaml
+++ b/core/src/main/resources/application-db.yaml
@@ -6,6 +6,7 @@ spring:
     show-sql: false
     hibernate:
       ddl-auto: none
+      use-new-id-generator-mappings: false
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     properties:
