--- a/front-angular/package.json
+++ b/front-angular/package.json
@@ -53,6 +53,7 @@
     "script-loader": "^0.7.2",
     "sockjs-client": "^1.5.0",
     "tslib": "^1.10.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
