--- a/api/build.gradle
+++ b/api/build.gradle
@@ -34,6 +34,9 @@ ext {
 dependencies {
 
 
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-aws
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-aws', version: '2.2.1.RELEASE'
+
 
     //Swagger
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
