--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,node,windows,gradle,intellij+all,eclipse
 
 ### Eclipse ###
+*.yaml
 .metadata
 bin/
 tmp/
@@ -271,7 +272,7 @@ typings/
 
 # Nuxt.js build / generate output
 .nuxt
-dist
+#dist
 
 # Gatsby files
 .cache/
@@ -323,20 +324,20 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-### Gradle ###
-.gradle
-gradle
-.idea
-build/
-
-# Ignore Gradle GUI config
-gradle-app.setting
-
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
-
-# Cache of project
-.gradletasknamecache
+#### Gradle ###
+#.gradle
+#gradle
+#.idea
+#build/
+#
+## Ignore Gradle GUI config
+#gradle-app.setting
+#
+## Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+#!gradle-wrapper.jar
+#
+## Cache of project
+#.gradletasknamecache
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
@@ -347,7 +348,7 @@ gradle-app.setting
 # End of https://www.toptal.com/developers/gitignore/api/macos,node,windows,gradle,intellij+all,eclipse
 /.idea/
 /api/src/main/resources/templates/docs/
-/gradlew
-/gradlew.bat
+#/gradlew
+#/gradlew.bat
 /front-angular/generate/
 /api/src/main/resources/webapp/
