--- a/api/src/main/resources/application-dev.yaml
+++ b/api/src/main/resources/application-dev.yaml
@@ -1,15 +1,19 @@
 spring:
+  # redis 설정
+  redis:
+    host: localhost
+    port: 6379
   application:
     name: api
   datasource:
-#    url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
-    url: jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE
-#    url: jdbc:h2:mem:test;COMPRESS=TRUE;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;
-#    url: jdbc:h2:~/test
+    #    url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+    url: jdbc:h2:mem:test
+    #    url: jdbc:h2:mem:test;COMPRESS=TRUE;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;
+    #    url: jdbc:h2:~/test
     driver-class-name: org.h2.Driver
   h2:
     console:
-#      settings: web-allow-others=true
+      #      settings: web-allow-others=true
       enabled: true
     path: /h2-console
   jpa:
