--- a/api/src/main/resources/application-prod.yaml
+++ b/api/src/main/resources/application-prod.yaml
@@ -1,21 +1,21 @@
 spring:
   application:
     name: api
-  profiles: real
   datasource:
-    url: jdbc:mariadb://3.35.140.126:3306/messenger
+    url: jdbc:mariadb://chatting-db.cbybkjwizlfq.ap-northeast-2.rds.amazonaws.com:3306/chatting?useUnicode=true
     driver-class-name: org.mariadb.jdbc.Driver
-    username: messengerUser
-    password: dbmessenger1234!@
+    username: admin
+    password: hwangadmin123!
+    data: classpath:data.sql
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MariaDB102Dialect
+        dialect: org.hibernate.dialect.MariaDBDialect
     show-sql: true
 logging:
-  config: classpath:logback-prod.xml
+  config: classpath:logback-dev.xml
 
 cloud:
   aws:
@@ -28,3 +28,44 @@ cloud:
       static: ap-northeast-2
     stack:
       auto: false
+
+
+
+
+
+
+
+
+
+
+
+
+#spring:
+#  application:
+#    name: api
+#  datasource:
+#    url: jdbc:mariadb://3.35.140.126:3306/messenger
+#    driver-class-name: org.mariadb.jdbc.Driver
+#    username: messengerUser
+#    password: dbmessenger1234!@
+#  jpa:
+#    hibernate:
+#      ddl-auto: none
+#    properties:
+#      hibernate:
+#        dialect: org.hibernate.dialect.MariaDB102Dialect
+#    show-sql: true
+#logging:
+#  config: classpath:logback-dev.xml
+#
+#cloud:
+#  aws:
+#    credentials:
+#      accessKey: AKIAU2UABLWF2JG2HL65
+#      secretKey: 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
+#    s3:
+#      bucket: serobucket
+#    region:
+#      static: ap-northeast-2
+#    stack:
+#      auto: false
