--- a/api/src/main/resources/application-prod.yaml
+++ b/api/src/main/resources/application-prod.yaml
@@ -1,4 +1,8 @@
 spring:
+  # redis 설정
+  redis:
+    host: 127.0.0.1
+    port: 6379
   application:
     name: api
   datasource:
@@ -9,7 +13,7 @@ spring:
     data: classpath:data.sql
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MariaDBDialect
