--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ subprojects { it ->
 		compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
 		compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
 		compile group: 'org.apache.commons', name: 'commons-text', version: '1.9'
-
+		implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
 
 		testImplementation 'org.springframework.security:spring-security-test'
