자동배포 설정 및 전체적인 코드 정리

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js: "12.0"
 
 branches:
   only:
-    - master # master 브랜치에 push되었을 때만 동작
+    - redis # master 브랜치에 push되었을 때만 동작
 
 # Travis CI 서버의 Home
 cache: # gradle을 통해 받은 의존성들을 캐시에 저장하여 같은 의존성은 다음 배포 때 다시 받지 않는다  .
@@ -38,8 +38,8 @@ deploy:
     local_dir: deploy # before_deploy에서 생성한 디렉토리
     wait-until-deployed: true
     on:
-      repo: hwangsero/ChattingProjectDeploy #Github 주소
-      branch: master
+      repo: hwangsero/ChattingProject #Github 주소
+      branch: redis
 
   #Travis가 AWS codedeploy를 실행시키도록 설정
   - provider: codedeploy
@@ -53,5 +53,5 @@ deploy:
     region: ap-northeast-2
     wait-until-deployed: true
     on:
-      repo: hwangsero/ChattingProjectDeploy
-      branch: master
+      repo: hwangsero/ChattingProject
+      branch: redis
